css/style.css
html, body, #map-canvas {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: 'Roboto Condensed', sans-serif;
  overflow: hidden;
}

.row {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

.col-1 {
  width: 8.33%;
}

.col-2 {
  width: 16.66%;
}

.col-3 {
  width: 25%;
}

.col-4 {
  width: 33.33%;
}

.col-5 {
  width: 41.66%;
}

.col-6 {
  width: 50%;
}

.col-7 {
  width: 58.33%;
}

.col-8 {
  width: 66.66%;
}

.col-9 {
  width: 75%;
}

.col-10 {
  width: 83.33%;
}

.col-11 {
  width: 91.66%;
}

.col-12 {
  width: 100%;
}

h1 {
  margin-bottom: 0;
  margin-left: 10px;
}

h2 {
  margin-top: 0;
  margin-bottom: 10px;
  margin-left: 10px;
}

.functions {
  margin-top: 20px;
}

.searchBar {
  width: 98%;
  margin-bottom: 4px;
}

.hideButton, .markerButton {
  width: 100%;
}

.floatRight {
  float: right;
}

.infoImage {
  margin-left: 5px;
}

.markerListHeader {
  margin-top: 0;
  margin-bottom: 0;
  text-align: center;
  font-size: 150%;
}

.markerListSub {
  margin-top: 10px;
  text-align: center;
}

ul {
  list-style-type: none;
  padding-left: 0;
}

li {
  padding-left: 20px;
  cursor: pointer;
}

li:hover {
  background: #d3d3d3;
  padding-left: 0;
  text-align: center;
}

#header {
  height: 15%;
}

#mainDiv {
  height: 85%;
  width:100%;
  display: flex;
}

#map-canvas {
  width: 100%;
}

#markerPanel {
  position: absolute;
  left: 80%;
  width: 20%;
  height: 100%;
  display: none;
  overflow: auto;
  border-top: solid;
  border-left: solid;
  border-color: #d3d3d3;
  border-width: 2px;
}

/* Adjustment for mobile size screens */
@media screen and (max-width: 500px) {
  .title {
    width: 100%;
    text-align: center;
  }
  .functions {
    width: 100%;
  }
  .searchBar {
    width: 32%;
  }
  .hideButton {
    width: 33%;
  }
  .markerButton {
    width: 33%;
  }

  #header {
    height: 20%;
  }

  #mainDiv {
    height: 80%;
  }

  #markerPanel {
    left: 20%;
    width: 80%;
  }
}

/* Incase the window gets too short, readjust so the function buttons
  are still visible */
@media screen and (max-height: 600px) {
  #header {
    height: 25%;
  }

  #mainDiv {
    height: 75%;
  }
}

@media screen and (min-height: 1000px) {
  #header {
    height: 10%;
  }

  #mainDiv {
    height: 90%;
  }
}

